# hry-chat

./: .gitignore  README.md  cursor_chat.md  dev.ps1  test_api.ipynb
.cursor/plans/: agent平台企业化改造_8443d91e.plan.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  db.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  config.py  conversation.py  knowledge_base.py  user.py
backend/app/services/: knowledge_base_service.py  llm.py  mock_llm.py
backend/tests/: conftest.py  test_connection.py  test_knowledge_base.py
docker-compose/: docker-compose.yml  hry-chat-docker-compose.yml  milvus-standalone-docker-compose.yml
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/knowledge-base/: page.tsx
frontend/app/knowledge-base/[kbId]/: page.tsx
frontend/components/: providers.tsx
frontend/components/cards/: index.ts
frontend/components/chat/: chat-input.tsx  chat-window.tsx  citation-tooltip.tsx  index.ts  message-item.tsx  message-list.tsx  sidebar.tsx
frontend/lib/: api.ts  atoms.ts
frontend/lib/markdown/: renderer.tsx
frontend/types/: chat.ts  knowledge-base.ts  user.ts
