[project]
name = "hry-chat-backend"
version = "0.1.0"
description = "AI Chat Backend with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.2.0",
    "httpx>=0.28.0",
    "openai>=1.59.0",
    "boto3>=1.42.45",
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.3.2",
    "pymilvus>=2.6.9",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "langchain-openai>=1.1.9",
    "pytest>=9.0.2",
    "jupyter>=1.1.1",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
